fixed text alignment in classes and prices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -310,6 +310,11 @@ margin-top: 5px;
     font-weight: 300;
     font-size: 16px;
     margin: 16px 0px;
+    text-align: left;
+}
+.class-text ul{
+    list-style: none;
+    padding: 0px;
 }
 .classes-container{
     display: flex;
@@ -367,6 +372,9 @@ margin-top: 5px;
     max-width: 863px;
     justify-content: space-between;
     margin: 0 auto;
+}
+.price-title{
+    text-align: left;
 }
 .price-title h4{
   font-size: 25px;
